<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Plexapp Android Client</name>
	<parent>
		<groupId>us.nineworlds.serenity</groupId>
		<artifactId>serenity-parent</artifactId>
		<version>1.9.2</version>
	</parent>

	<artifactId>serenity-app</artifactId>
	<packaging>apk</packaging>

	<properties>
		<android-version>5.0_r1</android-version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.nostra13.universalimageloader</groupId>
			<artifactId>universal-image-loader</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>com.google.android.gms</groupId>
			<artifactId>google-play-services</artifactId>
			<version>19.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>youtube-android-player-api</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>us.nineworlds.android</groupId>
			<artifactId>appcompat-v7</artifactId>
			<version>20.0.0</version>
			<type>apklib</type>
			<exclusions>
				<exclusion>
					<artifactId>compatibility-v4</artifactId>
					<groupId>android.support</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>us.nineworlds.android</groupId>
			<artifactId>leanback-v17</artifactId>
			<version>21.0.2</version>
			<type>apklib</type>
		</dependency>
<!--		<dependency>
			<groupId>us.nineworlds.android</groupId>
			<artifactId>twoway-view-core</artifactId>
			<version>0.1.3</version>
			<type>apklib</type>
		</dependency>
		<dependency>
			<groupId>us.nineworlds.android</groupId>
			<artifactId>twoway-view-layouts</artifactId>
			<version>0.1.3</version>
			<type>apklib</type>
		</dependency>
-->
		<dependency>
			<groupId>us.nineworlds.serenity</groupId>
			<artifactId>subtitle-converter</artifactId>
			<version>1.9.2</version>
		</dependency>
		<dependency>
			<groupId>us.nineworlds.serenity</groupId>
			<artifactId>plexapp-rest-library</artifactId>
			<version>1.9.2</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>com.mcxiaoke.volley</groupId>
			<artifactId>library</artifactId>
			<version>1.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp</groupId>
			<artifactId>okhttp</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp</groupId>
			<artifactId>okhttp-urlconnection</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.picasso</groupId>
			<artifactId>picasso</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.robolectric</groupId>
			<artifactId>robolectric</artifactId>
			<version>2.3</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>support-v4</artifactId>
					<groupId>com.android.support</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.squareup</groupId>
			<artifactId>fest-android</artifactId>
			<version>1.0.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp</groupId>
			<artifactId>mockwebserver</artifactId>
			<version>1.5.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>android</groupId>
			<artifactId>android</artifactId>
			<version>${android-version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.squareup.dagger</groupId>
			<artifactId>dagger</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.dagger</groupId>
			<artifactId>dagger-compiler</artifactId>
			<version>1.2.2</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>Serenity-${project.version}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.13</version>
				<dependencies>
					<dependency>
						<groupId>org.jacoco</groupId>
						<artifactId>org.jacoco.core</artifactId>
						<version>0.7.0.201403182114</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>${argLine} -noverify -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.0.201403182114</version>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<phase>validate</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/android/support/**/*.class</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/android/support/**/*.class</exclude>
								<exclude>**/R$*.class</exclude>
								<exclude>**/R.class</exclude>
								<exclude>**/SerenityConstants.class</exclude>
								<exclude>**/RecommendationBuilder.class</exclude>
								<exclude>**/com/jess/ui/**/*.class</exclude>
								<exclude>**/com/castillo/dd/**/*.class</exclude>
								<exclude>**/BadgeView.class</exclude>
								<exclude>**/RoundedImageView.class</exclude>
								<exclude>**/DrawerLayout.class</exclude>
								<exclude>**/us/nineworlds/serenity/widgets/*.class</exclude>
								<exclude>**/us/nineworlds/serenity/ui/dialogs/*.class</exclude>
								<exclude>**/us/nineworlds/serenity/core/model/*.class</exclude>
								<exclude>**/us/nineworlds/serenity/ui/views/TextClock*.class</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
				<artifactId>android-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>alignApk</id>
						<phase>install</phase>
						<goals>
							<goal>zipalign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sdk>
						<platform>21</platform>
					</sdk>
					<deleteConflictingFiles>true</deleteConflictingFiles>
					<zipalign>
						<verbose>true</verbose>
						<skip>false</skip>
						<inputApk>${project.build.directory}/Serenity-${project.version}.apk</inputApk>
						<outputApk>${project.build.directory}/Serenity-${project.version}-aligned.apk</outputApk>
					</zipalign>
					<proguard>
						<skip>true</skip>
						<proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
					</proguard>
				</configuration>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
				<dependencies>   
			        <dependency>   
						<groupId>com.squareup.dagger</groupId>
						<artifactId>dagger-compiler</artifactId>
						<version>1.2.2</version>
			        </dependency>   
			    </dependencies> 
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>eclipse</id>
			<properties>
				<android-version>3.2_r1</android-version>
			</properties>
		</profile>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>1.2</version>
						<executions>
							<execution>
								<id>signing</id>
								<goals>
									<goal>sign</goal>
								</goals>
								<phase>package</phase>
								<inherited>true</inherited>
								<configuration>
									<archiveDirectory />
									<includes>
										<include>target/*.apk</include>
									</includes>
									<keystore>${env.KEYSTORE}</keystore>
									<storepass>${env.KEYSTORE_PASSWORD}</storepass>
									<keypass>${env.KEY_PASSWORD}</keypass>
									<alias>nineworlds-key</alias>
									<arguments>
										<argument>-sigalg</argument>
										<argument>MD5withRSA</argument>
										<argument>-digestalg</argument>
										<argument>SHA1</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
						<artifactId>android-maven-plugin</artifactId>
						<inherited>true</inherited>
						<configuration>
							<sign>
								<debug>false</debug>
							</sign>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sign-google-play</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>1.2</version>
						<executions>
							<execution>
								<id>signing</id>
								<goals>
									<goal>sign</goal>
								</goals>
								<phase>package</phase>
								<inherited>true</inherited>
								<configuration>
									<archiveDirectory />
									<includes>
										<include>target/*.apk</include>
									</includes>
									<keystore>${env.KEYSTORE}</keystore>
									<storepass>${env.KEYSTORE_PASSWORD}</storepass>
									<keypass>${env.KEY_PASSWORD}</keypass>
									<alias>serenity-google-play</alias>
									<arguments>
										<argument>-sigalg</argument>
										<argument>MD5withRSA</argument>
										<argument>-digestalg</argument>
										<argument>SHA1</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>parse-version</id>
								<goals>
									<goal>parse-version</goal>
								</goals>
								<phase>validate</phase>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
						<artifactId>android-maven-plugin</artifactId>
						<inherited>true</inherited>
						<executions>
							<execution>
								<id>update-version-number</id>
								<goals>
									<goal>manifest-update</goal>
								</goals>
								<phase>process-resources</phase>
								<configuration>
									<manifest>
										<versionName>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${maven.build.timestamp}</versionName>
										<versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
									</manifest>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<sign>
								<debug>false</debug>
							</sign>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
